syntax = "proto3";

package product;
option go_package = "/product";

message CreateProductsRequest {
    string name = 1;
    string desc = 2;
    int64 total = 3;
    float price = 4;
}

message CreateProductsResponse {
    string productId = 1;
    string productName = 2;
}

service productService {
    rpc CreateProducts(stream CreateProductsRequest) returns (stream CreateProductsResponse);
}
